tinyc/test/bad/enum-redeclaration-by-variable.c
int main()
{
    enum {
        x = 10,
    };

    int x = 20;

    return 0;
}
